--- a/.github/workflows/tag_and_release_protos.yml
+++ b/.github/workflows/tag_and_release_protos.yml
@@ -23,7 +23,7 @@ jobs:
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
       - name: Bump tag
         id: bump
         uses: anothrNick/github-tag-action@1.52.0
@@ -38,13 +38,23 @@ jobs:
     runs-on: ubuntu-latest
     container: ghcr.io/viamrobotics/canon:amd64
     steps:
-      - uses: actions/checkout@v3
-      - uses: bufbuild/buf-setup-action@v1
+      - uses: actions/checkout@v5
+      - uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac
+        with:
+          install: false
+          experimental: true
+      - name: Extract buf version from mise
+        id: buf-version
+        run:
+          echo "version=$(mise tool buf --active)" >> $GITHUB_OUTPUT
+      - uses: bufbuild/buf-setup-action@a47c93e0b1648d5651a065437926377d060baa99
+        with:
+          version: ${{ steps.buf-version.outputs.version }}
       - uses: AdamMagaluk/buf-push-action@v1
         with:
           input: proto/viam
           buf_token: ${{ secrets.BUF_TOKEN }}
-          tag: ${{needs.bump-tag.outputs.new_tag}}
+          tag: ${{ needs.bump-tag.outputs.new_tag }}
 
   dispatch:
     needs: [bump-tag, buf-push]
