--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -34,6 +34,7 @@ jobs:
     # Run all Lint runs
     - uses: bufbuild/buf-lint-action@v1
     # Run breaking change detection against the `main` branch
-    - uses: bufbuild/buf-breaking-action@v1
+    - uses: bufbuild/buf-breaking-action@c57b3d842a5c3f3b454756ef65305a50a587c5ba
+      if: ${{ !contains(github.event.pull_request.labels.*.name, 'allow breaking') }}
       with:
         against: 'https://github.com/viamrobotics/api.git#branch=main'
